--- a/PAC1/package.json
+++ b/PAC1/package.json
@@ -1,16 +1,20 @@
 {
   "name": "repositori_html_i_css_mdomenech",
   "version": "1.0.0",
-  "main": "index.js",
   "scripts": {
-    "start": "parcel src/index.html",
-    "build": "parcel build src/index.html"
+    "start": "npm-run-all clean parcel:dev",
+    "build": "npm-run-all clean parcel:build",
+    "parcel:dev": "parcel",
+    "parcel:build": "parcel build src/index.html",
+    "clean": "rimraf dist .parcel-cache"
   },
   "keywords": [],
   "author": "mdomenech",
   "license": "ISC",
   "description": "",
   "devDependencies": {
-    "parcel": "latest"
+    "npm-run-all": "^4.1.5",
+    "parcel": "latest",
+    "rimraf": "^6.0.1"
   }
 }
