--- a/PAC1/package.json
+++ b/PAC1/package.json
@@ -17,5 +17,8 @@
     "npm-run-all": "^4.1.5",
     "parcel": "latest",
     "rimraf": "^6.0.1"
+  },
+  "dependencies": {
+    "sharp": "^0.34.1"
   }
 }
