--- a/PAC1/package.json
+++ b/PAC1/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "npm-run-all clean parcel:dev",
     "build": "npm-run-all clean parcel:build",
-    "parcel:dev": "parcel",
+    "parcel:dev": "parcel src/index.html",
     "parcel:build": "parcel build src/index.html",
     "clean": "rimraf dist .parcel-cache"
   },
@@ -16,9 +16,7 @@
   "devDependencies": {
     "npm-run-all": "^4.1.5",
     "parcel": "latest",
-    "rimraf": "^6.0.1"
-  },
-  "dependencies": {
-    "sharp": "^0.34.1"
+    "rimraf": "^6.0.1",
+    "sharp": "^0.33.5"
   }
 }
