--- a/PAC1/package.json
+++ b/PAC1/package.json
@@ -7,6 +7,8 @@
     "build": "npm-run-all clean parcel:build",
     "parcel:dev": "parcel src/index.html",
     "parcel:build": "parcel build src/index.html",
+    "move-images": "mkdir dist\\img && move dist\\*.jpg dist\\img\\ && move dist\\*.jpeg dist\\img\\ && move dist\\*.png dist\\img\\ && move dist\\*.webp dist\\img\\ && move dist\\*.avif dist\\img\\",
+    "convert-webp": "node tools/convert-to-webp.js",
     "clean": "rimraf dist .parcel-cache"
   },
   "keywords": [],
@@ -17,6 +19,7 @@
     "npm-run-all": "^4.1.5",
     "parcel": "latest",
     "rimraf": "^6.0.1",
-    "sharp": "^0.33.5"
+    "sharp": "^0.33.5",
+    "svgo": "^3.3.2"
   }
 }
