--- a/PAC1/sharp.config.json
+++ b/PAC1/sharp.config.json
@@ -1,6 +1,7 @@
 {
-        "quality": 80,
-        "jpeg": { "quality": 80 },
-        "webp": { "quality": 80 },
-        "avif": { "quality": 50 }
-  }
+      "quality": 75,
+      "jpeg": { "quality": 70 },
+      "webp": { "quality": 65 },
+      "avif": { "quality": 50 },
+      "png": { "quality": 75 }
+}
